[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/chip_white_sprite.png" type="Texture" id=1]
[ext_resource path="res://scenes/Chip.gd" type="Script" id=2]
[ext_resource path="res://scenes/LightingCircleference.gd" type="Script" id=3]
[ext_resource path="res://sprites/chip_white_vintage.png" type="Texture" id=4]
[ext_resource path="res://sprites/chip_black_vintage.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 110.0

[node name="Chip" type="StaticBody2D" groups=["chips"]]
scale = Vector2( 0.5, 0.5 )
input_pickable = true
script = ExtResource( 2 )
white_texture = ExtResource( 4 )
black_texture = ExtResource( 5 )
chip_speed = 1500

[node name="ChipSprite" type="Sprite" parent="."]
scale = Vector2( 0.275, 0.275 )
z_index = 1
texture = ExtResource( 1 )
region_filter_clip = true

[node name="ChipCollision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="LightingCircleference" type="Node2D" parent="."]
script = ExtResource( 3 )

[connection signal="mouse_entered" from="." to="." method="select_chip"]
[connection signal="mouse_exited" from="." to="." method="unselect_chip"]
